# Sensors

./: pyproject.toml
src/: __init__.py  sensor.py
src/builtin/: __init__.py  humidity.py  light.py  pressure.py  temperature.py
src/sensors/: data.py  sensor.py
src/sensors/builtin/: humidity.py  light.py
